[gd_scene load_steps=10 format=3 uid="uid://bj1boiwkh01mt"]

[ext_resource type="Script" uid="uid://bg21it16hc00n" path="res://audio_effects.gd" id="1_axtfn"]
[ext_resource type="AudioStream" uid="uid://be3q4qowdpn2i" path="res://sfx/Monkeys Spinning Monkeys.ogg" id="2_j5kgy"]
[ext_resource type="AudioStream" uid="uid://cm2mgrcndle8l" path="res://sfx/Ding.wav" id="3_uy531"]
[ext_resource type="AudioStream" uid="uid://cc8k4nqoujqe8" path="res://sfx/Glass Breaking.wav" id="4_ec4qa"]
[ext_resource type="AudioStream" uid="uid://3nfilwigqg8n" path="res://sfx/Meow.wav" id="5_y5hbb"]
[ext_resource type="AudioStream" uid="uid://gcbljknwc5do" path="res://sfx/Negative Beeps.wav" id="6_7l1yr"]
[ext_resource type="AudioStream" uid="uid://ij7a6y1bjbnv" path="res://sfx/Sad Trombone.wav" id="7_7ug2d"]
[ext_resource type="AudioStream" uid="uid://btpvyxliv8ldr" path="res://sfx/Static.wav" id="8_ifh36"]
[ext_resource type="AudioStream" uid="uid://biphmlacmhj1y" path="res://sfx/Whistle.wav" id="9_xhiv2"]

[node name="AudioEffects" type="Node2D"]
script = ExtResource("1_axtfn")
metadata/_edit_lock_ = true

[node name="Background" type="ColorRect" parent="."]
offset_left = -4.0
offset_top = -6.0
offset_right = 1156.0
offset_bottom = 652.0
color = Color(0, 0, 0, 1)

[node name="SoundEffects" type="Node2D" parent="."]
position = Vector2(-344, -86)

[node name="Music" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("2_j5kgy")
autoplay = true
bus = &"Music"

[node name="Ding" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("3_uy531")

[node name="Glass" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("4_ec4qa")

[node name="Meow" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("5_y5hbb")

[node name="Beeps" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("6_7l1yr")

[node name="Trombone" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("7_7ug2d")

[node name="Static" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("8_ifh36")

[node name="Whistle" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("9_xhiv2")

[node name="SoundEffectButtons" type="Node2D" parent="."]

[node name="ToggleMusic" type="CheckButton" parent="SoundEffectButtons"]
offset_left = 520.0
offset_top = 56.0
offset_right = 619.0
offset_bottom = 87.0
size_flags_horizontal = 4
size_flags_vertical = 0
button_pressed = true
text = "MUSIC
"

[node name="DingButton" type="Button" parent="SoundEffectButtons"]
offset_left = 64.0
offset_top = 176.0
offset_right = 168.0
offset_bottom = 240.0
text = "DING
"

[node name="GlassButton" type="Button" parent="SoundEffectButtons"]
offset_left = 288.0
offset_top = 176.0
offset_right = 392.0
offset_bottom = 240.0
text = "GLASS
SHATTER"

[node name="MeowButton" type="Button" parent="SoundEffectButtons"]
offset_left = 520.0
offset_top = 176.0
offset_right = 624.0
offset_bottom = 240.0
text = "MEOW"

[node name="BeepsButton" type="Button" parent="SoundEffectButtons"]
offset_left = 752.0
offset_top = 176.0
offset_right = 856.0
offset_bottom = 240.0
text = "NEGATIVE
BEEPS
"

[node name="TromboneButton" type="Button" parent="SoundEffectButtons"]
offset_left = 984.0
offset_top = 176.0
offset_right = 1088.0
offset_bottom = 238.0
text = "SAD
TROMBONE"

[node name="StaticButton" type="Button" parent="SoundEffectButtons"]
offset_left = 400.0
offset_top = 312.0
offset_right = 504.0
offset_bottom = 376.0
text = "RADIO
STATIC"

[node name="WhistleButton" type="Button" parent="SoundEffectButtons"]
offset_left = 640.0
offset_top = 312.0
offset_right = 744.0
offset_bottom = 376.0
text = "WHISTLE
"

[node name="AudioEffectButtons" type="GridContainer" parent="."]
offset_left = 127.0
offset_top = 518.0
offset_right = 1036.0
offset_bottom = 619.0
columns = 6

[node name="ToggleAmplify" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "Amplify"

[node name="ToggleBandLimiter" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "BandLimiter
"

[node name="ToggleBandPassFilter" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "BandPassFilter"

[node name="ToggleChorus" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "Chorus
"

[node name="ToggleCompressor" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "Compressor"

[node name="ToggleDelay" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "Delay"

[node name="ToggleDistortion" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "Distortion"

[node name="ToggleEQ6" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "EQ6 "

[node name="ToggleEQ10" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "EQ10"

[node name="ToggleEQ21" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "EQ21"

[node name="ToggleHighPassFilter" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "HighPassFilter"

[node name="ToggleLowShelfFilter" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "LowShelfFilter"

[node name="ToggleNotchFilter" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "NotchFilter"

[node name="TogglePanner" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "Panner"

[node name="TogglePhaser" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "Phaser"

[node name="TogglePitchShift" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "PitchShift"

[node name="ToggleReverb" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "Reverb"

[node name="ToggleStereoEnhance" type="CheckButton" parent="AudioEffectButtons"]
layout_mode = 2
text = "StereoEnhance"

[connection signal="toggled" from="SoundEffectButtons/ToggleMusic" to="." method="_on_toggle_music_toggled"]
[connection signal="pressed" from="SoundEffectButtons/DingButton" to="." method="_on_ding_button_pressed"]
[connection signal="pressed" from="SoundEffectButtons/GlassButton" to="." method="_on_glass_button_pressed"]
[connection signal="pressed" from="SoundEffectButtons/MeowButton" to="." method="_on_meow_button_pressed"]
[connection signal="pressed" from="SoundEffectButtons/BeepsButton" to="." method="_on_beeps_button_pressed"]
[connection signal="pressed" from="SoundEffectButtons/TromboneButton" to="." method="_on_trombone_button_pressed"]
[connection signal="pressed" from="SoundEffectButtons/StaticButton" to="." method="_on_static_button_pressed"]
[connection signal="pressed" from="SoundEffectButtons/WhistleButton" to="." method="_on_whistle_button_pressed"]
[connection signal="toggled" from="AudioEffectButtons/ToggleAmplify" to="." method="_on_toggle_amplify_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleBandLimiter" to="." method="_on_toggle_band_limiter_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleBandPassFilter" to="." method="_on_toggle_band_pass_filter_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleChorus" to="." method="_on_toggle_chorus_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleCompressor" to="." method="_on_toggle_compressor_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleDelay" to="." method="_on_toggle_delay_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleDistortion" to="." method="_on_toggle_distortion_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleEQ6" to="." method="_on_toggle_eq_6_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleEQ10" to="." method="_on_toggle_eq_10_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleEQ21" to="." method="_on_toggle_eq_21_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleHighPassFilter" to="." method="_on_toggle_high_pass_filter_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleLowShelfFilter" to="." method="_on_toggle_low_shelf_filter_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleNotchFilter" to="." method="_on_toggle_notch_filter_toggled"]
[connection signal="toggled" from="AudioEffectButtons/TogglePanner" to="." method="_on_toggle_panner_toggled"]
[connection signal="toggled" from="AudioEffectButtons/TogglePhaser" to="." method="_on_toggle_phaser_toggled"]
[connection signal="toggled" from="AudioEffectButtons/TogglePitchShift" to="." method="_on_toggle_pitch_shift_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleReverb" to="." method="_on_toggle_reverb_toggled"]
[connection signal="toggled" from="AudioEffectButtons/ToggleStereoEnhance" to="." method="_on_toggle_stereo_enhance_toggled"]
